Changes separator of blocks in i3blocks

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -3,7 +3,8 @@
 # Global properties that are appled to every block.
 # They can be overwritten for each block
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=15
+separator_block_width=18
+separator=false
 markup=none
 
 [linux]
