--- a/.config/i3/config
+++ b/.config/i3/config
@@ -66,7 +66,7 @@ floating_modifier $mod
 ################
 
 # start a terminal
-bindsym $mod+Return exec termite -e zsh
+bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
