--- a/.config/i3/config
+++ b/.config/i3/config
@@ -221,11 +221,14 @@ exec_always ~/.config/i3/scripts/monitorsetup.sh
 # Runs dunst, a minimalistic notification daemon
 exec_always --no-startup-id dunst -to 10 -align center
 
+# Disables trackpad clicks for 0.5s after typing
+exec_always syndaemon -i 0.5 -t -d
+
 # Runs the network manager applet
 exec --no-startup-id nm-applet
 
-# Runs compton compositor, allows opacity. No fading between window change.
-exec --no-startup-id compton --no-fading-openclose
+# Runs compton compositor, allows opacity.
+exec --no-startup-id compton -D 4 -i 0.9 -f
 
 # Starts MEGA at login
 exec megasync
