Adds new script for showing the name of the wireless connection.

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -14,7 +14,6 @@ interval=once
 [mediaplayer]
 instance=spotify
 interval=1
-signal=10
 command=~/.config/i3/scripts/spotify-currently-playing.py
 color=#00cc00
 
@@ -22,14 +21,17 @@ color=#00cc00
 label=
 instance=Master
 interval=1
-signal=5
 color=#80bfff
 
 [backlight]
 interval=1
-signal=10
 command=~/.config/i3/scripts/backlight-indicator.py
 color=#ffff99
+
+[wireless]
+interval=60
+command=~/.config/i3/scripts/wirelessconnection.sh
+color=#3ffcfc
 
 [battery]
 color=#e699ff
