Adds support for editing wireless connections with a button

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,6 +33,11 @@ interval=60
 command=~/.config/i3/scripts/wirelessconnection.sh
 color=#3ffcfc
 
+[wirelesschange]
+full_text=
+command=termite -e nmtui
+color=#3ffcfc
+
 [battery]
 color=#e699ff
 command=~/.config/i3/scripts/battery-indicator.py
