changes separator width

--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -3,7 +3,7 @@
 # Global properties that are appled to every block.
 # They can be overwritten for each block
 command=/usr/lib/i3blocks/$BLOCK_NAME
-separator_block_width=18
+separator_block_width=12
 separator=false
 markup=none
 
@@ -32,6 +32,7 @@ color=#ffff99
 interval=60
 command=~/.config/i3/scripts/wirelessconnection.sh
 color=#3ffcfc
+separator_block_width=4
 
 [wirelesschange]
 full_text=
