--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,11 +17,12 @@ set $w8 "8 "
 set $w9 "9 "
 set $w10 "10 "
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
+
+set $bg_color            #2f343f
+set $inactive_bg_color   #2f343f
+set $text_color          #f3f4f5
+set $inactive_text_color #676E7D
+set $urgent_bg_color     #E53935
 
 ###########
 # General #
@@ -171,26 +172,30 @@ new_float normal
 
 # window colors
 # event                 # border            # background       # text               #indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $inactive-bg-color  $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+client.focused          $bg_color           $bg_color          $text_color          #00ff00
+client.unfocused        $inactive_bg_color  $inactive_bg_color $inactive_text_color #00ff00
+client.focused_inactive $inactive_bg_color  $inactive_bg_color $inactive_text_color #00ff00
+client.urgent           $urgent_bg_color    $urgent_bg_color   $text_color          #00ff00
 
 bar {
         # Specific to status bar.
         font pango:Droid Sans Mono, Icons 12
         position top
         colors {
-                background $bg-color
+                background $bg_color
                 separator #757575
                 # event            # border           # background       # text
-                focused_workspace  $bg-color          $bg-color          $text-color
-                inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-                urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+                focused_workspace  $bg_color          $bg_color          $text_color
+                inactive_workspace $inactive_bg_color $inactive_bg_color $inactive_text_color
+                urgent_workspace   $urgent_bg_color   $urgent_bg_color   $text_color
         }
         # i3blocks for status bar. See below conf file.
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
+
+# necessary for i3-gaps
+gaps inner 15
+gaps outer 5
 
 ##########################
 # Additional Keybindings #
@@ -211,6 +216,26 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+# Converts window to picture-in-picture mode, top-left, small to large
+bindsym $mod+Control+q exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 400px; resize shrink height 10000px; resize grow height 250px;move position 10px 35px;'"
+bindsym $mod+Control+w exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 480px; resize shrink height 10000px; resize grow height 300px;move position 10px 35px;'"
+bindsym $mod+Control+e exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 560px; resize shrink height 10000px; resize grow height 350px;move position 10px 35px;'"
+
+# Converts window to picture-in-picture mode, top-right, small to large
+bindsym $mod+Control+i exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 400px; resize shrink height 10000px; resize grow height 250px;move position 1430px 35px;'"
+bindsym $mod+Control+o exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 480px; resize shrink height 10000px; resize grow height 300px;move position 1350px 35px;'"
+bindsym $mod+Control+p exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 560px; resize shrink height 10000px; resize grow height 350px;move position 1270px 35px;'"
+
+# Converts window to picture-in-picture mode, bottom-left, small to large
+bindsym $mod+Control+a exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 400px; resize shrink height 10000px; resize grow height 250px;move position 10px 770px;'"
+bindsym $mod+Control+s exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 480px; resize shrink height 10000px; resize grow height 300px;move position 10px 720px;'"
+bindsym $mod+Control+d exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 560px; resize shrink height 10000px; resize grow height 350px;move position 10px 670px;'"
+
+# Converts window to picture-in-picture mode, bottom-right, small to large
+bindsym $mod+Control+j exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 400px; resize shrink height 10000px; resize grow height 250px;move position 1430px 770px;'"
+bindsym $mod+Control+k exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 480px; resize shrink height 10000px; resize grow height 300px;move position 1350px 720px;'"
+bindsym $mod+Control+l exec "i3-msg 'floating toggle; sticky toggle; resize shrink width 10000px; resize grow width 560px; resize shrink height 10000px; resize grow height 350px;move position 1270px 670px;'"
+
 ############################################################
 # Programs that load on login start with `exec`            #
 # Programs that load on desktop restart with `exec_always` #
@@ -227,7 +252,7 @@ exec_always --no-startup-id dunst -to 10 -align center
 exec_always syndaemon -i 0.5 -t -d
 
 # Runs compton compositor, allows opacity.
-exec --no-startup-id compton -D 4 -i 0.90 -f
+exec --no-startup-id compton
 
 # Sets keyboard layout
 exec setxkbmap -layout us
