--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = lance.lafontaine92@gmail.com
+	email = lancelafontaine@protonmail.com
 	name = Lance Lafontaine
 [merge]
 	tool = vimdiff
